# giaic-q3

.devcontainer/: devcontainer.json
01-python/: README.md
01-python/01_complete_python_course/03_functions/: 03_arbitrary_arguments.py
01-python/01_complete_python_course/04_lists/: project_list_min_frequency.py
01-python/01_complete_python_course/09_files/: main.py
01-python/02_learn_streamlit/: app.py
01_complete_python_course/: 01_input.py
01_complete_python_course/03_functions/: 02_keyword_arguments.py
01_complete_python_course/04_lists/: 03_list_operators_practice.py  project_list_min.py
01_complete_python_course/06_dict/: 01_dict_operators.py  05_my_dat_practice.py
01_complete_python_course/10-oop/: 05_inheritence.py  06_class_method_decorator.py
01_complete_python_course/15-pydantic/: pyproject.toml
03-openai-agents-sdk/02-uv-with-package/: pyproject.toml
03-openai-agents-sdk/02-uv-with-package/src/02_uv_with_package/: __init__.py
h-gpt/: app.py  requirements.txt
mind_check/: app.py
openai-agents-sdk/01-uv/: pyproject.toml
pdfeditor/: app.py
prompt_engineering/: 01_markdown.md
python/01_complete_python_course/: .gitignore
python/04_mount-stupid-bootcamp/: README.md
python/05_my_practice/: app.py  file_io.py  interning.py  list.py  python_execution.py  string_practice.py  test.py
python/logic_building_101/: app.py
python/password_strength_meter/: main.py
python/udemy_course/: 08_oop.py
streamlit_projects/personal_library_manager/: README.md  library.json
unit-converter-gpt/: main.py
(+265 files in other folders)
