[project]
name = "02-uv-with-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Huzair Ahmed Khan", email = "huzairahmedkhan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
02-uv-with-package = "02_uv_with_package:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
